Update code with comment to run tests on own computer

--- a/Project3/config.yaml
+++ b/Project3/config.yaml
@@ -6,6 +6,7 @@ name: 'default'
 
 data:
     root_dir: '/home/ubuntu/dataset'
+    #root_dir: './dataset'
     batch_size: 4
     delta: 1.0                  # Task 2a: Extension of the bounding boxes
     max_points: 512             # Task 2b: Maximum points per pooled region
