--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,10 @@ dmypy.json
 
 # Data folder
 */data
+*/dataset
 
 # VSCode
 .DS_Store
+
+#Generated files
+Project3/code_2022-06-22_16-02-53.tar.gz
